Fix web-app responsiveness on tablets

--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -1,4 +1,4 @@
-body {
+body, html {
     background-color: #999999;
     height: 100vh;
 }
@@ -20,7 +20,6 @@ nav .label {
     margin-left: 5px;
     margin-right: 5px;
 }
-
 /* These elements need their padding, margin and border reset to show properly */
 .row, .col-xs-6, .col-xs-3 {
     padding: 0;
@@ -36,17 +35,19 @@ nav .label {
     height: 100%;
 }
 
-#right_area, #left_area {
-    height: 100%;
-}
-
 .zone {
     display: block;
     position: absolute;
     width: 100px;
     height: 100px;
-    right: 50px;
-    bottom: 50px;
+    right: 25px;
+    bottom: 25px;
+}
+
+.body_container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 /* Top block consisting of the camera views, and the editing camera view.*/
@@ -56,7 +57,18 @@ nav .label {
 }
 
 #body_area {
-    height: 400px;
+    flex: 1;
+    display: flex;
+}
+
+#left_area {
+    overflow: scroll;
+    display: flex;
+    flex: 1;
+}
+
+#right_area {
+    overflow: hidden;
 }
 
 /* Camera block carousel */
@@ -103,14 +115,17 @@ nav .label {
 
 /* Preset area configuration. */
 #preset_area {
-    height: 100%;
+    background-color: #787878;
+    display: flex
+    flex-direction: column;
+    width: 100%;
+    margin: 0;
+    padding: 0;
     overflow: scroll;
-
 }
 
 #preset_area img {
     width: 100%;
-    height: 80px;
     border: 0;
     padding: 0;
     margin: 0;
